--- a/index.html
+++ b/index.html
@@ -295,6 +295,59 @@
                 aspect-ratio: 1/1;
             }
         }
+        
+    body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+            color: #fff;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+        .achievements-section {
+            padding: 60px 0;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+        }
+        .achievement-card {
+            background: rgba(255, 255, 255, 0.15);
+            border-radius: 10px;
+            padding: 30px;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+        .achievement-card:hover {
+            transform: translateY(-10px);
+        }
+        .achievement-card h3 {
+            font-size: 3rem;
+            font-weight: 700;
+            color: #ffd700;
+            margin-bottom: 10px;
+        }
+        .achievement-card p {
+            font-size: 1.2rem;
+            color: #e0e0e0;
+        }
+        .animated-text {
+            font-size: 2.5rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            color: #fff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+        @media (max-width: 768px) {
+            .achievement-card h3 {
+                font-size: 2rem;
+            }
+            .animated-text {
+                font-size: 1.8rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -454,6 +507,69 @@
             </div>
         </div>
     </section>
+    <section class="achievements-section">
+        <div class="container">
+            <h2 class="text-center mb-5 animated-text animate__animated animate__fadeInDown">Our Achievements</h2>
+            <div class="row g-4">
+                <div class="col-md-6 col-lg-4">
+                    <div class="achievement-card">
+                        <h3 class="counter" data-target="40">0</h3>
+                        <p>Happy Clients</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="achievement-card">
+                        <h3 class="counter" data-target="2">0</h3>
+                        <p>Years of Excellence</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="achievement-card">
+                        <h3 class="counter" data-target="100">0</h3>
+                        <p>Projects Completed</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- JavaScript for Counter Animation -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const counters = document.querySelectorAll('.counter');
+            const speed = 200; // Animation speed
+
+            const animateCounters = () => {
+                counters.forEach(counter => {
+                    const updateCount = () => {
+                        const target = +counter.getAttribute('data-target');
+                        const count = +counter.innerText;
+                        const increment = target / speed;
+
+                        if (count < target) {
+                            counter.innerText = Math.ceil(count + increment);
+                            setTimeout(updateCount, 20);
+                        } else {
+                            counter.innerText = target;
+                        }
+                    };
+                    updateCount();
+                });
+            };
+
+            // Trigger animation when section is in view
+            const section = document.querySelector('.achievements-section');
+            const observer = new IntersectionObserver(entries => {
+                if (entries[0].isIntersecting) {
+                    animateCounters();
+                    observer.disconnect(); // Run animation only once
+                }
+            }, { threshold: 0.5 });
+            observer.observe(section);
+        });
+    </script>
 
     <!-- My Designs Section -->
     <section id="designs" class="designs-section">
